better essay(ish)

--- a/posts/Limitations of the Quantitative Approach to Bias and Fairness/index.qmd
+++ b/posts/Limitations of the Quantitative Approach to Bias and Fairness/index.qmd
@@ -4,13 +4,13 @@ author: "Jiffy Lesica"
 bibliography: refs.bib
 format: html
 ---
-In his 2022 lecture, *The Limits of the Quantitative Approach to Discrimination*, Arvind Narayanan puts forth a provocative claim on the role of quantitative methods in the contemporary age: “currently quantitative methods are primarily used to justify the status quo. I would argue that they do more harm than good” (Narayanan 2022). However, such a claim can only be fully appreciated in the fuller context of his speech, including not only its evidence and subclaims, but also Narayanan’s own positionality. As Narayanan explains in his speech, the effects of Quantitative Methods seen today are not because of any inherent flaw, but instead because we have misunderstood the role and value of numbers in a human society. As a quantitative scholar himself, Narayanan can provide a distinct level of specificity to this claim – of insider insight – which helps illuminate the tangible realities which beg us to take seriously that – as simple as it may sound – numbers actually can lie.
+In his 2022 lecture, *The Limits of the Quantitative Approach to Discrimination*, Arvind Narayanan puts forth a provocative claim on the role of quantitative methods in the contemporary age: “currently quantitative methods are primarily used to justify the status quo. I would argue that they do more harm than good” (Narayanan 2022). However, such a claim can only be fully appreciated in the fuller context of his speech, including not only its evidence and subclaims, but also Narayanan’s own positionality. As Narayanan explains in his speech, the harmful effects of Quantitative Methods seen today are not due of any inherent flaw, but instead because we have misunderstood the role and value of numbers in a human society. As a quantitative scholar himself, Narayanan can provide a distinct level of specificity to this claim – of insider insight – which helps illuminate the tangible realities which beg us to take seriously that – as simple as it may sound – numbers actually can lie.
 
 Narayanan highlights 7 key limitations of quantitative methods which he has observed in his time as a quantitative scientist: Choice of null hypothesis, Use of snapshot datasets, Use of data provided by company, Explaining away discrimination, Wrong locus of intervention, The objectivity illusion, and Performativity.
 
-The *objectivity illusion* is the quantitative limitation which, in a way, is at the heart of all other limitations put forth in Narayanan’s essay. As such, it is at the heart of the logic which my essay puts forth. Acknowledging it necessarily brings about complications of snapshot data, explaining away discrimination, and even the performative policies which quantitative science has brought about. The objectivity illusion refers to the false belief that quantitative research is objective because numbers are objective. Quantitative research involves subjective decisions made by researchers at multiple steps throughout the process such as – as mentioned above – choice of dataset or data collection methods, how to frame research questions and findings, which variables to control and to test on, and what “counts” as statistical evidence of discrimination: “In a typical research paper I would say researchers make at least 10-20 subjective choices, each of which could substantially alter their conclusions” (Narayanan 2022). The objectivity illusion is also at the heart of the previously mentioned limitations of snapshot data sets. As D’ignazio and Klein explain, “data are not neutral or objective. They are products of unequal social relations, and this context is essential for conducting accurate, ethical analysis” (Data Feminism, Introduction). Contemporary theories in the humanities, while not directly engaging questions of the quantitative world, offer language which is helpful to clarify the objectivity illusion. In his book *Crossing and Dwellings*, Thomas Tweed draws from insights of his scholarship to encourage a dynamic and itinerant approach to religious theory. 
+The *objectivity illusion* is the quantitative limitation which, in a way, is at the heart of all other limitations put forth in Narayanan’s essay. As such, it is at the heart of the logic which my essay puts forth. Acknowledging it necessarily brings about complications of snapshot data, explaining away discrimination, and even the performative policies which quantitative science has brought about. The objectivity illusion refers to the false belief that quantitative research is objective because numbers are objective. Quantitative research involves subjective decisions made by researchers at multiple steps throughout the process such as – as mentioned above – choice of dataset or data collection methods, how to frame research questions and findings, which variables to control and to test on, and what “counts” as statistical evidence of discrimination: “In a typical research paper I would say researchers make at least 10-20 subjective choices, each of which could substantially alter their conclusions” (Narayanan 2022). The objectivity illusion is also at the heart of the previously mentioned limitations of snapshot data sets. As D’ignazio and Klein explain, “data are not neutral or objective. They are products of unequal social relations, and this context is essential for conducting accurate, ethical analysis” (Data Feminism, Introduction). Contemporary theories in the humanities, while not directly engaging questions of the quantitative world, offer language which is helpful to clarify the objectivity illusion.
 
-The reason I bring such a seemingly distant resource to this conversation is, well, because it may not be as distant as we think. In fact, the model of theory which Tweed puts forth is quite similar to the “adversarial collaboration” approach of interpreting data which Narayanan mentions as “admirable”, in that it “explicitly acknowledges that scientists have their biases, their pet theories, their favored and hoped for conclusions” which will ultimately bias – in conscious or unconscious ways – the methodological approach they bring to their research (Narayanan 2022). As Tweed writes, “it is precisely because we stand in a particular place that we are able to see, to know, to narrate” (Tweed 18). There is no independent access to the experiences or subjective states of another, only that which the scholar can ‘see’ – used by Tweed to represent the multi-sensory reception of the corporeal world before us (Tweed 17). And, it is from those sightings that a scholar is able to construct meaning using the “categories and criteria they inherit, revise, and create” (Tweed 18). In the quantitative world, such sightings are at particular risk of being incomplete not because it is inherently worse, but because it is just simply not possible yet – whether by nature or by the limitations of modern technology – to capture the depth and variety of human experience with numbers. It is in recognizing this reality that the first steps may be taken towards deconstructing the epistemic hierarchy which grips the quantitative world.
+In his book *Crossing and Dwellings*, for example, Thomas Tweed draws from insights of his scholarship to encourage a dynamic and itinerant approach to religious theory. The reason I bring such a seemingly distant resource to this conversation is, well, because it may not be as distant as we think. In fact, the model of theory which Tweed puts forth is quite similar to the “adversarial collaboration” approach of interpreting data which Narayanan mentions as “admirable”, in that it “explicitly acknowledges that scientists have their biases, their pet theories, their favored and hoped for conclusions” which will ultimately bias – in conscious or unconscious ways – the methodological approach they bring to their research (Narayanan 2022). As Tweed writes, “it is precisely because we stand in a particular place that we are able to see, to know, to narrate” (Tweed 18). There is no independent access to the experiences or subjective states of another, only that which the scholar can ‘see’ – used by Tweed to represent the multi-sensory reception of the corporeal world before us (Tweed 17). And, it is from those sightings that a scholar is able to construct meaning using the “categories and criteria they inherit, revise, and create” (Tweed 18). In the quantitative world, such sightings are at particular risk of being incomplete not because it is inherently worse, but because it is just simply not possible yet – whether by nature or by the limitations of modern technology – to capture the depth and variety of human experience with numbers. It is in recognizing this reality that the first steps may be taken towards deconstructing the epistemic hierarchy which grips the quantitative world.
 
 It is ultimately from the objectivity illusion that other limitations emerge. For example, take the *Choice of null hypothesis*. Quantitative communities have “settled on the absence of discrimination” as the default assumption. Choosing to see the world as impartial puts the burden of proof on those alleging discrimination, and naively pretends that quantitative scholars – or really that anyone – has the capacity to live in a world void of human subjectivity. Such a choice not only ignores, but may even perpetuate discrimination as it brushes aside the possibility of systemic discrimination – which manifests in implicit, everyday forms and compound over time – and holds us back from implementing the critical interventions which may help address discriminatory realities. To standardize the absence of discrimination holds a massive normative significance in that it encourages us to be blind to inequality unless it presents itself clearly and ‘objectively’, and even then, retain a level of skepticism towards it until it can be quantitatively confirmed. Narayanan’s observations about the choice and the null hypothesis point us to consider the principles upon which we build quantitative methods, and particularly how quantitative methods and researchers operate in relation to power. Quantitative scholars who follow the framework of Data Feminism, for example, would argue that such considerations should manifest in challenges to unequal power structures and working toward justice (Data Feminism, Introduction). However, even before such a principle can be acted on, scholars must first take seriously the existence of power structures, and the ways in which the data they evaluate grows within, exists in relation to, and is drawn from those contexts. 
 
