--- a/posts/Implementing Perceptron/index.ipynb
+++ b/posts/Implementing Perceptron/index.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Link to Perceptron Implementation:\n",
+    "\n",
+    "https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Implementing the Perceptron Algorithm:\n",
     "\n",
     "### By Jiffy Lesica\n",
