--- a/posts/Implementing Perceptron/index.ipynb
+++ b/posts/Implementing Perceptron/index.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "title: \"Implementing Perceptron\"\n",
+    "author: \"Jiffy Lesica\"\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Link to Perceptron Implementation:\n",
     "\n",
     "https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py"
