better code explanation on Perceptron

--- a/posts/Implementing Perceptron/index.ipynb
+++ b/posts/Implementing Perceptron/index.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "Link to Perceptron Implementation:\n",
     "\n",
-    "https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py"
+    "[Perceptron pyfile](https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py)"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -112,8 +103,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensor shape exploration\n",
+    "\n",
+    "First, I set up small tensor examples to visualize their shapes throughout the empirical risk minimization process, and how we can reshape a tensor to ensure proper dimensions for matrix multiplication."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +206,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper Functions\n",
+    "\n",
+    "Below are a series of helper functions which will facilitate clean code/effective abstraction through this blog post.\n",
+    "\n",
+    "1. perceptron_data: creates set of labeled data points\n",
+    "2. plot_perceptron_data: visualizes labeled date points using matplotlib's pyplot\n",
+    "3. draw_line: plots decision boundary of a given weight vector (used in plots of data points after gradient descent). This function comes from Professor Phil Chodrow's lecture notes for his Machine Learning course at Middlebury College."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +255,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perceptron Training Loop and Visualization\n",
+    "\n",
+    "The below function - perceptron_loss_and_plot - trains the perceptron using the perceptron update rule. It logs the loss of the current weight vector after each iteration, and visualizes the final decision boundary (if the input data is 2-dimensional)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
