--- a/posts/Implementing Perceptron/index.ipynb
+++ b/posts/Implementing Perceptron/index.ipynb
@@ -14,9 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link to Perceptron Implementation:\n",
-    "\n",
-    "[Perceptron pyfile](https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py)"
+    "Link to Perceptron Implementation: [Perceptron pyfile](https://github.com/jiffylesica/jiffylesica.github.io/blob/f3386b4f18d6acdffbc6182d1e5081c1bd403d10/posts/Implementing%20Perceptron/perceptron.py)"
    ]
   },
   {
