with style edits

--- a/posts/Implementing Logistic Regression/index.ipynb
+++ b/posts/Implementing Logistic Regression/index.ipynb
@@ -386,11 +386,11 @@
    "source": [
     "### In this section, I analyze a [real-world dataset](https://www.kaggle.com/datasets/juice0lover/users-vs-bots-classification) containing features from user profiles on a Russian social media platform, VKontakte. The goal od this analysis is to train a model to predict whether a profile is a bot (target = 1) or a human (target = 0). I implement this using a logistic regression model with gradient descent, both with and without momentum. The analysis includes the following steps:\n",
     "\n",
-    "### 1. Data preprocessing: All feature values from the dataset must be converted to numeric values. I will drop column entries that are mostly missing, as well as data entries with absent values. Then I will split the dataset into training and test set using train-test split from scikit learn.\n",
-    "### 2. Feature engineering\n",
-    "### 3. Train the Model: Fit the logistic regression model using gradient descent with and without momentum.\n",
-    "### 4. Visualize Results: Plot the training loss data across gradient descent iterations for both approaches mentioned in step 3.\n",
-    "### 5. Calculate the accuracy of the model on test data."
+    "1. Data preprocessing: All feature values from the dataset must be converted to numeric values. I will drop column entries that are mostly missing, as well as data entries with absent values. Then I will split the dataset into training and test set using train-test split from scikit learn.\n",
+    "2. Feature engineering\n",
+    "3. Train the Model: Fit the logistic regression model using gradient descent with and without momentum.\n",
+    "4. Visualize Results: Plot the training loss data across gradient descent iterations for both approaches mentioned in step 3.\n",
+    "5. Calculate the accuracy of the model on test data."
    ]
   },
   {
