--- a/posts/Double Descent/index.ipynb
+++ b/posts/Double Descent/index.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "091a3a79",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Double Descent in Overparameterized Regression\"\n",
+    "author: \"Jiffy Lesica\"\n",
+    "date: 2025-05-17\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ae4fb634",
    "metadata": {},
    "source": [
     "## Abstract:\n",
     "\n",
-    "In this blog post, I explore how feature complexity/quantity affects the performance of linear regression models, particularly in the context of overparameterized optimization. I begin the post by analyzing why the standard solution to regression fails at the interpolation threshold - where the number of features begins to exceed number of data observations. I then implemented an overparameterized linear regression model using the Moore-Penrose pseudoinverse to fit data - linked here - and assessed its ability to learn on 1D data and corrupted image data. By performing a sweep of potential feature numbers - generated with random nonlinear feature maps - I generated training and testing error curves which help clarify double descent through visualization. Specifically, my results show that while performance worsens around the interpolation threshold, it quickly improves as feature count increases beyond data observations, with my lowest testing error occurring with 200 features on a synthetic dataset with 100 observations."
+    "In this blog post, I explore how feature complexity/quantity affects the performance of linear regression models, particularly in the context of overparameterized optimization. I begin the post by analyzing why the standard solution to regression fails at the interpolation threshold - where the number of features begins to exceed number of data observations. I then implemented an overparameterized linear regression model using the Moore-Penrose pseudoinverse to fit data - linked [here](https://github.com/jiffylesica/jiffylesica.github.io/blob/main/posts/Double%20Descent/logistic.py) - and assessed its ability to learn on 1D data and corrupted image data. By performing a sweep of potential feature numbers - generated with random nonlinear feature maps - I generated training and testing error curves which help clarify double descent through visualization. Specifically, my results show that while performance worsens around the interpolation threshold, it quickly improves as feature count increases beyond data observations, with my lowest testing error occurring with 200 features on a synthetic dataset with 100 observations."
    ]
   },
   {
