--- a/posts/Evolution and DNNs - Final Report/main.ipynb
+++ b/posts/Evolution and DNNs - Final Report/main.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "# Abstract\n",
     "\n",
-    "This blog post explores the application of the principals of evolution to weight vector optimization problems. A comprehensive evolutionary optimizer class, with hyperparameters allowing for control over selection, inheritance, diversity, mutations rates, and mutation styles, was created. Exploratory experiments were then run to attempt to understand the strengths and limitations of the various values for each of these hyperparameters. Experiments were performed on generated data as well as the MNIST dataset. Due to computation limitations, a complete optimization loop on the MNIST dataset was out of scope for this project. However, a final accuracy of 82% was achieved."
+    "This blog post explores the application of the principals of evolution to weight vector optimization problems ([Link to Codebase/project Repo](https://github.com/lawolff1702/EVO)). A comprehensive evolutionary optimizer class, with hyperparameters allowing for control over selection, inheritance, diversity, mutations rates, and mutation styles, was created. Exploratory experiments were then run to attempt to understand the strengths and limitations of the various values for each of these hyperparameters. Experiments were performed on generated data as well as the MNIST dataset. Due to computation limitations, a complete optimization loop on the MNIST dataset was out of scope for this project. However, a final accuracy of 82% was achieved."
    ]
   },
   {
@@ -582,7 +582,13 @@
    "id": "9b1a71cf",
    "metadata": {},
    "source": [
-    "# Personal Reflection:"
+    "# Personal Reflection:\n",
+    "\n",
+    "Working on this project taught me a lot about not just neural networks or optimization, but about communication and collaboration. I quickly realized how difficult it can be to clearly explain technical and often abstract concepts, especially when they are new to everyone involved. As a team, we had to find ways of communicating that worked not only collectively but also respected how each of us learns individually. Personally, I learned more about myself as a learner and developer: how to organize my code more cleanly, how to manage responsibilities in a shared codebase, and how to balance rapidly changing experimentation with readable, maintainable work.\n",
+    "\n",
+    "Looking back, I’m incredibly proud of what we achieved. At the outset, I was nervous, especially about understanding deep neural networks. But not only did we meet our goals, we built something that I initially wasn’t sure I could contribute to meaningfully. I gained confidence in my technical abilities and found real excitement in tackling difficult problems. While there were definitely bugs, missteps, and late-night debugging sessions, they were part of a process that left me feeling accomplished.\n",
+    "\n",
+    "This experience will stay with me. I’ve discovered that I’m passionate about learning how computational and problem-solving strategies work at a deep level, and that I thrive when I can explore those questions in a collaborative environment. I also gained important skills in strategic time management and how to structure tasks to fit into a bigger picture. Whether I’m in a future course, on the job, or even working on a personal project, I’ll carry forward these lessons in both the technical and human dimensions of working on meaningful solutions to complex problems."
    ]
   }
  ],
