--- a/posts/Evolution and DNNs - Final Report/main.ipynb
+++ b/posts/Evolution and DNNs - Final Report/main.ipynb
@@ -22,6 +22,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "040fcda3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "31b96871",
    "metadata": {},
    "source": [
@@ -414,9 +420,12 @@
    "id": "4b045d09",
    "metadata": {},
    "source": [
+    "\n",
     "<img src=\"images/NormalizeDiversity/output.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 1:* Comparing test accuracy, loss, and normalized diversity values for all 4 diversity metrics."
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "    <em>Figure 1:</em> Comparing test accuracy, loss, and normalized diversity values for all 4 diversity metrics.</p>\n",
+    "</div>"
    ]
   },
   {
@@ -432,25 +441,36 @@
    "id": "d0692e6d",
    "metadata": {},
    "source": [
+    "\n",
     "<img src=\"images/NormalizeDiversity/output1.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 2:* Baseline experiment outputs to provide reference test accuracy, loss, and diversity values for cosine driven loss.\n",
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px;\">\n",
+    "<em>Figure 2:</em> Baseline experiment outputs to provide reference test accuracy, loss, and diversity values for cosine driven loss.\n",
+    "</div>\n",
     "\n",
     "<img src=\"images/NormalizeDiversity/output2.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 3:* Confirming working implementation of diversity coefficient's effect on diversity based loss by setting diversity coefficient to 0.0\n",
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px;\">\n",
+    "<em>Figure 3:</em> Confirming working implementation of diversity coefficient's effect on diversity based loss by setting diversity coefficient to 0.0.\n",
+    "</div>\n",
     "\n",
     "<img src=\"images/NormalizeDiversity/output4.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 4:* Results showing the effects of increased diversity coefficient of 0.3 - i.e. higher effect of diversity punishment/reward on loss - on test accuracy, loss, and diversity values.\n",
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<em>Figure 4:</em> Results showing the effects of increased diversity coefficient of 0.3 - i.e. higher effect of diversity punishment/reward on loss - on test accuracy, loss, and diversity values.</p>\n",
+    "</div>\n",
     "\n",
     "<img src=\"images/NormalizeDiversity/output3.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 5:* Results for increased population size of 100 weight vectors on test accuracy, loss, and diversity values.\n",
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<em>Figure 5:</em> Results for increased population size of 100 weight vectors on test accuracy, loss, and diversity values.\n",
+    "</div>\n",
     "\n",
     "<img src=\"images/NormalizeDiversity/output5.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
-    "*Figure 6:* Results for impact of high mutation rate and mutation intensity on test accuracy, loss, and diversity values.\n"
+    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<em>Figure 6:</em> Results for impact of high mutation rate and mutation intensity on test accuracy, loss, and diversity values.\n",
+    "</div>\n"
    ]
   },
   {
