--- a/posts/Evolution and DNNs - Final Report/main.ipynb
+++ b/posts/Evolution and DNNs - Final Report/main.ipynb
@@ -424,7 +424,7 @@
     "<img src=\"images/NormalizeDiversity/output.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
     "\n",
     "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
-    "    <em>Figure 1:</em> Comparing test accuracy, loss, and normalized diversity values for all 4 diversity metrics.</p>\n",
+    "    <em>Figure 1:</em> Comparing test accuracy, loss, and normalized diversity values for all 4 diversity metrics.\n",
     "</div>"
    ]
   },
