with formats forreal

--- a/posts/Evolution and DNNs - Final Report/main.ipynb
+++ b/posts/Evolution and DNNs - Final Report/main.ipynb
@@ -421,9 +421,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"images/NormalizeDiversity/output.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px;\">\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px;\">\n",
     "<em>Figure 1:</em> Comparing test accuracy, loss, and normalized diversity values for all 4 diversity metrics.\n",
     "</div>"
    ]
@@ -442,33 +442,33 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"images/NormalizeDiversity/output1.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output1.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px;\">\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px;\">\n",
     "<em>Figure 2:</em> Baseline experiment outputs to provide reference test accuracy, loss, and diversity values for cosine driven loss.\n",
     "</div>\n",
     "\n",
-    "<img src=\"images/NormalizeDiversity/output2.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output2.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px;\">\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px;\">\n",
     "<em>Figure 3:</em> Confirming working implementation of diversity coefficient's effect on diversity based loss by setting diversity coefficient to 0.0.\n",
     "</div>\n",
     "\n",
-    "<img src=\"images/NormalizeDiversity/output4.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output4.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
-    "<em>Figure 4:</em> Results showing the effects of increased diversity coefficient of 0.3 - i.e. higher effect of diversity punishment/reward on loss - on test accuracy, loss, and diversity values.</p>\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<em>Figure 4:</em> Results showing the effects of increased diversity coefficient of 0.3 - i.e. higher effect of diversity punishment/reward on loss - on test accuracy, loss, and diversity values.\n",
     "</div>\n",
     "\n",
-    "<img src=\"images/NormalizeDiversity/output3.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output3.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px\">\n",
     "<em>Figure 5:</em> Results for increased population size of 100 weight vectors on test accuracy, loss, and diversity values.\n",
     "</div>\n",
     "\n",
-    "<img src=\"images/NormalizeDiversity/output5.png\" width=\"900\" style=\"display:block; margin:auto;\" />\n",
+    "<img src=\"images/NormalizeDiversity/output5.png\" width=\"900\" style=\"display: block; margin-left: auto; margin-right: auto\" />\n",
     "\n",
-    "<div style=\"text-align: center; font-size: 0.8em; margin-top: 6px; margin-bottom: 6px\">\n",
+    "<div style=\"text-align: center; margin-top: 6px; margin-bottom: 6px\">\n",
     "<em>Figure 6:</em> Results for impact of high mutation rate and mutation intensity on test accuracy, loss, and diversity values.\n",
     "</div>\n"
    ]
