--- a/index.qmd
+++ b/index.qmd
@@ -46,4 +46,14 @@ page-layout: full
 ```
 :::
 
+::: {.g-col-8}
+```{=html}
+<div class="card" onclick="window.open('https://wander-logger.vercel.app', '_blank')" style="cursor: pointer;">
+  <img src="/img/section-imgs/WanderLoggerLogo.png" style="width:10%">
+  <h2>WanderLogger: Beta</h2>
+  <p>Your Digital Travel Log</p>
+</div>
+```
+:::
+
 :::
