--- a/index.qmd
+++ b/index.qmd
@@ -13,6 +13,26 @@ page-layout: full
 <!--Creates responsive grid layout of elements-->
 :::{.grid .justify-center}
 
+::: {.g-col-8}
+```{=html}
+<div class="card" onclick="window.open('https://wander-logger.vercel.app/login', '_blank')" style="cursor: pointer;">
+  <img src="/img/section-imgs/WanderLoggerLogo.png" style="width:10%">
+  <h2>WanderLogger: Beta</h2>
+  <p>Your Digital Travel Log</p>
+</div>
+```
+:::
+
+::: {.g-col-8}
+```{=html}
+<div class="card" onclick="window.open('https://www.jiffylesica.com/', '_blank')" style="cursor: pointer;">
+  <img src="/img/section-imgs/photo-portfolio.JPG" style="width:10%">
+  <h2>Photography Portfolio</h2>
+  <p>jiffylesica.com</p>
+</div>
+```
+:::
+
 <!--Creates container which is element of grid (takes up 8/12 grid regions) -->
 :::{.g-col-8}
 
@@ -42,16 +62,6 @@ page-layout: full
   <img src="/img/section-imgs/opening-channels.png" style="width:10%">
   <h2>Women Religion and Ethnography</h2>
   <p>Ethnographic Research Paper</p>
-</div>
-```
-:::
-
-::: {.g-col-8}
-```{=html}
-<div class="card" onclick="window.open('https://wander-logger.vercel.app', '_blank')" style="cursor: pointer;">
-  <img src="/img/section-imgs/WanderLoggerLogo.png" style="width:10%">
-  <h2>WanderLogger: Beta</h2>
-  <p>Your Digital Travel Log</p>
 </div>
 ```
 :::
