--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Welcome to my Portfolio"
-format: html
+format:
+  html:
+    css: styles.css
 page-layout: full
 ---
 
@@ -13,20 +15,20 @@ page-layout: full
 <!--Creates responsive grid layout of elements-->
 :::{.grid .justify-center}
 
-::: {.g-col-8}
+::: {.g-col-6}
 ```{=html}
 <div class="card" onclick="window.open('https://wander-logger.vercel.app/login', '_blank')" style="cursor: pointer;">
-  <img src="/img/section-imgs/WanderLoggerLogo.png" style="width:10%">
+  <img src="/img/section-imgs/WanderLoggerLogo.png">
   <h2>WanderLogger: Beta</h2>
   <p>Your Digital Travel Log</p>
 </div>
 ```
 :::
 
-::: {.g-col-8}
+::: {.g-col-6}
 ```{=html}
 <div class="card" onclick="window.open('https://www.jiffylesica.com/', '_blank')" style="cursor: pointer;">
-  <img src="/img/section-imgs/photo-portfolio.JPG" style="width:10%">
+  <img src="/img/section-imgs/photo-portfolio.JPG">
   <h2>Photography Portfolio</h2>
   <p>jiffylesica.com</p>
 </div>
@@ -34,34 +36,34 @@ page-layout: full
 :::
 
 <!--Creates container which is element of grid (takes up 8/12 grid regions) -->
-:::{.g-col-8}
+:::{.g-col-6}
 
 <!-- Insert raw HTML block to include WHOLE CLICKCABLE card -->
 ```{=html}
 <div class="card" onclick="location.href='machine-learning/index.html'" style="cursor: pointer;">
-  <img src="/img/section-imgs/Machine-Learning-img1.png" style="width:10%">
+  <img src="/img/section-imgs/Machine-Learning-img1.png">
   <h2> Machine Learning Blog Posts </h2>
   <p> A collection of Blog Posts on Machine Learning Topics </p>
 </div>
 ```
 :::
 
-::: {.g-col-8}
+::: {.g-col-6}
 ```{=html}
 <div class="card" onclick="location.href='religion-project/index.html'" style="cursor: pointer;">
-  <img src="/img/section-imgs/opening-channels.png" style="width:10%">
-  <h2>Senior Project on Religion</h2>
-  <p>My research paper on religion, narrative, and devotional labor.</p>
+  <img src="/img/section-imgs/opening-channels.png">
+  <h2>Opening Channels to the Divine</h2>
+  <p>Senior Research Paper for Religion Department @ Middlebury</p>
 </div>
 ```
 :::
 
-::: {.g-col-8}
+::: {.g-col-6}
 ```{=html}
 <div class="card" onclick="location.href='ethnography-paper/index.html'" style="cursor: pointer;">
-  <img src="/img/section-imgs/opening-channels.png" style="width:10%">
-  <h2>Women Religion and Ethnography</h2>
-  <p>Ethnographic Research Paper</p>
+  <img src="/img/section-imgs/ethno-paper.jpg">
+  <h2>Devotional Labor and the Making of Islamic Selfhood</h2>
+  <p>Ethnographic Research Paper @ Middlebury College</p>
 </div>
 ```
 :::
